--- a/continuous_signals/standard_signals.ipynb
+++ b/continuous_signals/standard_signals.ipynb
@@ -83,7 +83,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "y = x.subs(omega, 5).subs(sigma, .5)\n",
+    "y = x.subs({omega: 5, sigma : -.5})\n",
     "\n",
     "sym.plot(sym.re(y), (t, 0, 2*sym.pi), ylabel=r'Re{$e^{st}$}')\n",
     "sym.plot(sym.im(y), (t, 0, 2*sym.pi), ylabel=r'Im{$e^{st}$}');"
@@ -104,25 +104,19 @@
    "source": [
     "### Dirac Impulse\n",
     "\n",
-    "The Dirac impulse is one of the most important signals in the theory of signals and systems. It is used for the characterization of LTI systems and the modeling of impulse-like signals. The Dirac impulse is defined by way of the [Dirac delta function](https://en.wikipedia.org/wiki/Dirac_delta_function) which is not a function in the conventional sense but a generalized function or *distribution*. The Dirac impulse is denoted as\n",
-    "\n",
-    "\\begin{equation}\n",
-    "x(t) = \\delta(t)\n",
-    "\\end{equation}\n",
-    "\n",
-    "The Dirac delta function can be defined as the limiting case of other functions or by its effect on other functions. Please refer to the literature for a detailed discussion of the mathematical foundations of the Dirac delta distribution. For its application in signal processing it is suitable to consider only certain properties. The most relevant properties of the Dirac impulse in the context of signals and systems are\n",
+    "The Dirac impulse is one of the most important signals in the theory of signals and systems. It is used for the characterization of LTI systems and the modeling of impulse-like signals. The Dirac impulse is defined by way of the [Dirac delta function](https://en.wikipedia.org/wiki/Dirac_delta_function) which is not a function in the conventional sense but a generalized function or *distribution*. The Dirac impulse is denoted as $\\delta(t)$. The Dirac delta function can be defined as the limiting case of other functions or by its effect on other functions. Please refer to the literature for a detailed discussion of the mathematical foundations of the Dirac delta distribution. For its application in signal processing it is suitable to consider only certain properties. The most relevant properties of the Dirac impulse in the context of signals and systems are\n",
     "\n",
     "1. **Sifting property**\n",
     "    \\begin{equation}\n",
-    "    \\int_{-\\infty}^{\\infty} \\delta(t) \\cdot s(t) = s(0)\n",
+    "    \\int_{-\\infty}^{\\infty} \\delta(t) \\cdot x(t) = x(0)\n",
     "    \\end{equation}\n",
-    "    where $s(t)$ needs to be differentiable at $t=0$. The sifting property implies $\\int_{-\\infty}^{\\infty} \\delta(t) = 1$.\n",
+    "    where $x(t)$ needs to be differentiable at $t=0$. The sifting property implies $\\int_{-\\infty}^{\\infty} \\delta(t) = 1$.\n",
     "    \n",
     "2. **Multiplication**\n",
     "    \\begin{equation}\n",
-    "    s(t) \\cdot \\delta(t) = s(0) \\cdot \\delta(t)\n",
+    "    x(t) \\cdot \\delta(t) = x(0) \\cdot \\delta(t)\n",
     "    \\end{equation}\n",
-    "    where $s(t)$ needs to be differentiable at $t=0$.\n",
+    "    where $x(t)$ needs to be differentiable at $t=0$.\n",
     "    \n",
     "3. **Linearity**\n",
     "    \\begin{equation}\n",
@@ -137,7 +131,7 @@
     "    \n",
     "5. **Derivation**\n",
     "    \\begin{equation}\n",
-    "    \\int_{-\\infty}^{\\infty} \\dot{\\delta}(t) \\cdot s(t) = -\\dot{s}(0)\n",
+    "    \\int_{-\\infty}^{\\infty} \\frac{d \\delta(t)}{dt} \\cdot x(t) = - \\frac{d x(t)}{dt} \\bigg\\vert_{t = 0}\n",
     "    \\end{equation}\n",
     "\n",
     "It is important to note that the product $\\delta(t) \\cdot \\delta(t)$ of two Dirac impulses is not defined."
@@ -158,15 +152,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "x = sym.DiracDelta(t)\n",
-    "x"
+    "delta = sym.DiracDelta(t)\n",
+    "delta"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now let's check the sifting property by defining a arbitrary signal (function) $s(t)$ and integrating over its product with the Delta impulse"
+    "Now let's check the sifting property by defining an arbitrary signal (function) $f(t)$ and integrating over its product with the Delta impulse"
    ]
   },
   {
@@ -175,8 +169,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "s = sym.Function('s')\n",
-    "sym.integrate(x*s(t), (t, -sym.oo, sym.oo))"
+    "f = sym.Function('f')(t)\n",
+    "sym.integrate(delta*f, (t, -sym.oo, sym.oo))"
    ]
   },
   {
@@ -213,7 +207,7 @@
    "source": [
     "**Example**\n",
     "\n",
-    "In the following an Heaviside signal $x(t) = \\epsilon(t)$ is defined and plotted. Note that `Sympy` denotes the Heaviside function by $\\theta(t)$."
+    "In the following, a Heaviside signal $\\epsilon(t)$ is defined and plotted. Note that `Sympy` denotes the Heaviside function by $\\theta(t)$."
    ]
   },
   {
@@ -222,8 +216,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "x = sym.Heaviside(t)\n",
-    "x"
+    "step = sym.Heaviside(t)\n",
+    "step"
    ]
   },
   {
@@ -232,7 +226,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sym.plot(x, (t, -2, 2), ylim=[-0.2, 1.2], ylabel=r'$\\epsilon(t)$');"
+    "sym.plot(step, (t, -2, 2), ylim=[-0.2, 1.2], ylabel=r'$\\epsilon(t)$');"
    ]
   },
   {
@@ -242,7 +236,7 @@
     "Let's construct a harmonic signal $\\cos(\\omega t)$ with $\\omega=2$ which is switched on at $t=0$. Considering the definition of the Heaviside function, the desired signal is given as \n",
     "\n",
     "\\begin{equation}\n",
-    "s(t) = \\cos(\\omega t) \\cdot \\epsilon(t)\n",
+    "x(t) = \\cos(\\omega t) \\cdot \\epsilon(t)\n",
     "\\end{equation}"
    ]
   },
@@ -252,8 +246,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "s = sym.cos(omega*t) * sym.Heaviside(t)\n",
-    "sym.plot(s.subs(omega,2), (t, -2, 10), ylim=[-1.2, 1.2], ylabel=r'$s(t)$');"
+    "x = sym.cos(omega*t) * sym.Heaviside(t)\n",
+    "sym.plot(x.subs(omega,2), (t, -2, 10), ylim=[-1.2, 1.2], ylabel=r'$x(t)$');"
    ]
   },
   {
@@ -281,7 +275,7 @@
    "source": [
     "**Example**\n",
     "\n",
-    "The Heaviside function is used to construct the rectangular signal in `Sympy`"
+    "The Heaviside function is used to define a rectangular function in `Sympy`. This function is then used as rectangular signal."
    ]
   },
   {
@@ -290,8 +284,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "x = sym.Heaviside(t).subs(t, t+1/2) - sym.Heaviside(t).subs(t, t-1/2)\n",
-    "sym.plot(x, (t, -1, 1), ylim=[-0.2, 1.2], ylabel=r'rect$(t)$');"
+    "class rect(sym.Function):\n",
+    "\n",
+    "    @classmethod\n",
+    "    def eval(cls, arg):\n",
+    "        return sym.Heaviside(t).subs(t, t + sym.S.Half) - sym.Heaviside(t).subs(t, t - sym.S.Half)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sym.plot(rect(t), (t, -1, 1), ylim=[-0.2, 1.2], ylabel=r'rect$(t)$');"
    ]
   },
   {
@@ -315,10 +321,10 @@
     "\\text{sgn}(t) = \\begin{cases} 1 & t>0 \\\\ 0 & t=0 \\\\ -1 & t < 0  \\end{cases}\n",
     "\\end{equation}\n",
     "\n",
-    "The sign signal is useful to represent the absolute value of a signal $s(t)$ by a multiplication\n",
+    "The sign signal is useful to represent the absolute value of a signal $x(t)$ by a multiplication\n",
     "\n",
     "\\begin{equation}\n",
-    "|s(t)| = s(t) \\cdot \\text{sgn}(s(t))\n",
+    "|x(t)| = x(t) \\cdot \\text{sgn}(x(t))\n",
     "\\end{equation}\n",
     "\n",
     "It is related to the Heaviside function as follows\n",
@@ -334,7 +340,7 @@
    "source": [
     "**Example**\n",
     "\n",
-    "The following example illustrates the sign signal $x(t) = \\text{sgn}(t)$. Note that the sign function is represented as $\\text{sign}(t)$ in `Sympy`."
+    "The following example illustrates the sign signal $\\text{sgn}(t)$. Note that the sign function is represented as $\\text{sign}(t)$ in `Sympy`."
    ]
   },
   {
@@ -343,8 +349,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "x = sym.sign(t)\n",
-    "x"
+    "sgn = sym.sign(t)\n",
+    "sgn"
    ]
   },
   {
@@ -353,7 +359,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sym.plot(x, (t, -2, 2), ylim=[-1.2, 1.2], ylabel=r'sgn$(t)$');"
+    "sym.plot(sgn, (t, -2, 2), ylim=[-1.2, 1.2], ylabel=r'sgn$(t)$');"
    ]
   },
   {
