--- a/continuous_signals/standard_signals.ipynb
+++ b/continuous_signals/standard_signals.ipynb
@@ -2,7 +2,9 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "nbsphinx": "hidden"
+   },
    "source": [
     "# Continuous Signals\n",
     "\n",
@@ -179,7 +181,7 @@
    "source": [
     "**Exercise**\n",
     "\n",
-    "* Derive the sifting property for a shifted dirac impulse $\\delta(t-\\tau)$ and check your results by modifing above example."
+    "* Derive the sifting property for a shifted Dirac impulse $\\delta(t-\\tau)$ and check your results by modifing above example."
    ]
   },
   {
@@ -197,7 +199,7 @@
     "Note that different definitions are used which differ with respect to the value of $\\epsilon(t)$ at $t=0$. The Heaviside signal is used to represent a signal that switches on at a specified time and stays switched on indefinitely. The Heaviside signal can be related to the Dirac impulse by\n",
     "\n",
     "\\begin{equation}\n",
-    "\\int_{-\\infty}^{t} \\delta(\\tau) d\\tau = \\epsilon(t)\n",
+    "\\int_{-\\infty}^{t} \\delta(\\tau) \\; d\\tau = \\epsilon(t)\n",
     "\\end{equation}"
    ]
   },
@@ -288,7 +290,7 @@
     "\n",
     "    @classmethod\n",
     "    def eval(cls, arg):\n",
-    "        return sym.Heaviside(t).subs(t, t + sym.S.Half) - sym.Heaviside(t).subs(t, t - sym.S.Half)"
+    "        return sym.Heaviside(arg + sym.S.Half) - sym.Heaviside(arg - sym.S.Half)"
    ]
   },
   {
@@ -364,7 +366,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "nbsphinx": "hidden"
+   },
    "source": [
     "**Copyright**\n",
     "\n",
