Changed variable for angular frequency in examples

--- a/fourier_transform/definition.ipynb
+++ b/fourier_transform/definition.ipynb
@@ -87,7 +87,7 @@
     "\n",
     "t, w = sym.symbols('t omega', real=True)\n",
     "\n",
-    "X = sym.integrate(sym.DiracDelta(t)*sym.exp(-1j*om*t), (t, -sym.oo, sym.oo))\n",
+    "X = sym.integrate(sym.DiracDelta(t)*sym.exp(-1j*sym.I*t), (t, -sym.oo, sym.oo))\n",
     "X"
    ]
   },
@@ -104,8 +104,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def fourier_transform_t_om(x, **hints):\n",
-    "    return sym.fourier_transform(x, t, sym.symbols('f'), **hints).subs('f', om/(2*sym.pi))"
+    "def fourier_transform_t_w(x, **hints):\n",
+    "    return sym.fourier_transform(x, t, sym.symbols('f'), **hints).subs('f', w/(2*sym.pi))"
    ]
   },
   {
@@ -121,7 +121,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "X = fourier_transform_t_om(sym.DiracDelta(t))\n",
+    "X = fourier_transform_t_w(sym.DiracDelta(t))\n",
     "X"
    ]
   },
@@ -208,7 +208,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "X = fourier_transform_t_om(rect(t))\n",
+    "X = fourier_transform_t_w(rect(t))\n",
     "X"
    ]
   },
@@ -235,7 +235,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sym.plot(X, (om, -30, 30), xlabel=r'$\\omega$', ylabel=r'sinc($\\omega / 2$)');"
+    "sym.plot(X, (w, -30, 30), xlabel=r'$\\omega$', ylabel=r'sinc($\\omega / 2$)');"
    ]
   },
   {
