Revised definition of function for Fourier transform

--- a/fourier_transform/definition.ipynb
+++ b/fourier_transform/definition.ipynb
@@ -87,8 +87,17 @@
     "\n",
     "t, w = sym.symbols('t omega', real=True)\n",
     "\n",
-    "X = sym.integrate(sym.DiracDelta(t)*sym.exp(-1j*sym.I*t), (t, -sym.oo, sym.oo))\n",
+    "X = sym.integrate(sym.DiracDelta(t)*sym.exp(-sym.I*w*t), (t, -sym.oo, sym.oo))\n",
     "X"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sym.transforms._fourier_transform?"
    ]
   },
   {
@@ -104,8 +113,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def fourier_transform_t_w(x, **hints):\n",
-    "    return sym.fourier_transform(x, t, sym.symbols('f'), **hints).subs('f', w/(2*sym.pi))"
+    "def fourier_transform(x, **hints):\n",
+    "    return sym.transforms._fourier_transform(x, t, w, 1, -1, 'Fourier')"
    ]
   },
   {
@@ -121,7 +130,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "X = fourier_transform_t_w(sym.DiracDelta(t))\n",
+    "X = fourier_transform(sym.DiracDelta(t))\n",
     "X"
    ]
   },
@@ -208,7 +217,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "X = fourier_transform_t_w(rect(t))\n",
+    "X = fourier_transform(rect(t))\n",
     "X"
    ]
   },
