Added labels to plots

--- a/systems_time_domain/convolution.ipynb
+++ b/systems_time_domain/convolution.ipynb
@@ -139,8 +139,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def plot_signals(x_axis, x, h):\n",
-    "    p1 = sym.plot(x, (x_axis, -5, 5), show=False, line_color='b', ylabel='', xlabel='')\n",
+    "def plot_signals(x_axis, x, h, ylabel, xlabel):\n",
+    "    p1 = sym.plot(x, (x_axis, -5, 5), show=False, line_color='b', ylabel=ylabel, xlabel=xlabel)\n",
     "    p2 = sym.plot(h, (x_axis, -5, 5), show=False, line_color='r')\n",
     "    p1.extend(p2)\n",
     "    p1.show()"
@@ -162,7 +162,7 @@
     "h = sym.exp(-t) * sym.Heaviside(t)\n",
     "x = rect(t - 1/2)\n",
     "\n",
-    "plot_signals(t, x, h)"
+    "plot_signals(t, x, h, r'$h(t)$, $x(t)$', r'$t$')"
    ]
   },
   {
@@ -181,7 +181,7 @@
     "h1 = h.subs(t, tau)\n",
     "x1 = x.subs(t, tau)\n",
     "\n",
-    "plot_signals(tau, x1, h1)"
+    "plot_signals(tau, x1, h1, r'$h(\\tau)$, $x(\\tau)$', r'$\\tau$')"
    ]
   },
   {
@@ -199,7 +199,7 @@
    "source": [
     "h2 = h1.subs(tau, -tau)\n",
     "\n",
-    "plot_signals(tau, x1, h2)"
+    "plot_signals(tau, x1, h2, r'$h(-\\tau)$, $x(\\tau)$', r'$\\tau$')"
    ]
   },
   {
@@ -217,7 +217,7 @@
    "source": [
     "h3 = h2.subs(tau, tau-t)\n",
     "\n",
-    "plot_signals(tau, x1, h3.subs(t, -2))"
+    "plot_signals(tau, x1, h3.subs(t, -2), r'$h(t-\\tau)$, $x(\\tau)$', r'$\\tau$')"
    ]
   },
   {
