Revisions and properties of Fourier transform

--- a/fourier_transform/definition.ipynb
+++ b/fourier_transform/definition.ipynb
@@ -104,7 +104,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def fourier_transform(x, **hints):\n",
+    "def fourier_transform(x):\n",
     "    return sym.transforms._fourier_transform(x, t, w, 1, -1, 'Fourier')"
    ]
   },
