--- a/laplace_transform/definition.ipynb
+++ b/laplace_transform/definition.ipynb
@@ -160,15 +160,15 @@
    "source": [
     "s0 = sym.symbols('s0', complex=True)\n",
     "\n",
-    "X = sym.laplace_transform(sym.exp(-s0*t), t, s)\n",
-    "X"
+    "X, a, cond = sym.laplace_transform(sym.exp(-s0*t), t, s)\n",
+    "X, a, cond"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The function returns a list of three results. Its first element is the Laplace transform $X(s)$, the second element $a$ is the half-plane of convergence with $\\Re \\{ s \\} > a$ the third element are auxiliary convergence conditions."
+    "The function returns three results. Its first element is the Laplace transform $X(s)$, the second element $a$ is the half-plane of convergence with $\\Re \\{ s \\} > a$ the third element are auxiliary convergence conditions."
    ]
   },
   {
