Added transform of the Heaviside signal

--- a/laplace_transform/definition.ipynb
+++ b/laplace_transform/definition.ipynb
@@ -175,6 +175,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Transformation of the Heaviside Signal\n",
+    "\n",
+    "The Laplace transform of the [Heaviside signal](../continuous_signals/standard_signals.ipynb#Heaviside-Signal) is derived from above transform of the causal complex exponential signal $\\epsilon(t) \\cdot e^{-s_0 t}$ by setting $s_0 = 0$\n",
+    "\n",
+    "\\begin{equation}\n",
+    "\\mathcal{L} \\{ \\epsilon(t) \\} = \\frac{1}{s} \\qquad \\text{for } \\Re \\{ s \\} > 0\n",
+    "\\end{equation}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Convergence\n",
     "\n",
     "A sufficient but not necessary condition for the existence of the Laplace transform $X(s) = \\mathcal{L} \\{ x(t) \\}$ of a given signal $x(t)$ is\n",
