--- a/discrete_signals/standard_signals.ipynb
+++ b/discrete_signals/standard_signals.ipynb
@@ -99,10 +99,10 @@
     "import matplotlib.pyplot as plt\n",
     "\n",
     "def exponential_signal(k, Sigma, Omega):\n",
-    "    return np.exp((Sigma+1j*Omega)*k)\n",
+    "    return np.exp((Sigma + 1j * Omega) * k)\n",
     "\n",
     "def plot_signal(k, x):\n",
-    "    plt.figure(figsize=(10,4))\n",
+    "    plt.figure(figsize=(10, 4))\n",
     "    plt.subplot(121)\n",
     "    plt.stem(k, np.real(x))\n",
     "    plt.xlabel('$k$')\n",
@@ -163,7 +163,7 @@
    "outputs": [],
    "source": [
     "Np = 20.55\n",
-    "x = exponential_signal(k, 0, 2*np.pi/Np)\n",
+    "x = exponential_signal(k, 0, 2 * np.pi / Np)\n",
     "plot_signal(k, x)"
    ]
   },
@@ -229,7 +229,7 @@
    "outputs": [],
    "source": [
     "def dirac(k):\n",
-    "    return np.where(k==0, 1.0, 0.0)\n",
+    "    return np.where(k == 0, 1.0, 0.0)\n",
     "\n",
     "k = np.arange(-10, 11)\n",
     "x = dirac(k)\n",
@@ -252,11 +252,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "x = dirac(k-6)\n",
+    "x = dirac(k - 6)\n",
     "y = np.cos(k)\n",
     "w = x*y\n",
     "\n",
-    "plt.figure(figsize=(10,4))\n",
+    "plt.figure(figsize=(10, 4))\n",
     "plt.subplot(121)\n",
     "plt.stem(k, y)\n",
     "plt.xlabel('$k$')\n",
@@ -312,7 +312,7 @@
    "outputs": [],
    "source": [
     "def heaviside(k):\n",
-    "    return np.where(k>=0, 1.0, 0.0)\n",
+    "    return np.where(k >= 0, 1.0, 0.0)\n",
     "\n",
     "k = np.arange(-5, 20)\n",
     "x = heaviside(k)\n",
@@ -358,7 +358,7 @@
    "outputs": [],
    "source": [
     "def rect(k, N):\n",
-    "    return np.where((k>=0) & (k<N), 1.0, 0.0)\n",
+    "    return np.where((k >= 0) & (k < N), 1.0, 0.0)\n",
     "\n",
     "k = np.arange(-5, 20)\n",
     "x = rect(k, 10)\n",
