--- a/discrete_signals/operations.ipynb
+++ b/discrete_signals/operations.ipynb
@@ -55,7 +55,7 @@
     "import matplotlib.pyplot as plt\n",
     "\n",
     "k = np.arange(0, 51)\n",
-    "x = np.cos(2*np.pi/10 * k) + 2*np.cos(2*np.pi/15 * k)\n",
+    "x = np.cos(2 * np.pi / 10 * k) + 2 * np.cos(2 * np.pi / 15 * k)\n",
     "\n",
     "plt.figure(figsize=(6, 3))\n",
     "plt.stem(k, x)\n",
@@ -99,7 +99,7 @@
     "The signal can be computed efficiently using the [modulo operation](https://en.wikipedia.org/wiki/Modulo_operation)\n",
     "\n",
     "\\begin{equation}\n",
-    "x[k] = k \\mod N\n",
+    "x[k] = k \\bmod N\n",
     "\\end{equation}\n",
     "\n",
     "which is illustrated in the following"
@@ -128,13 +128,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Flipping"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "### Flipping\n",
+    "\n",
     "The flipping of a signal $s[k]$ is defined as\n",
     "\n",
     "\\begin{equation}\n",
@@ -219,9 +214,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.1"
+   "version": "3.5.2rc1"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
