Revised text, examples

--- a/discrete_systems/convolution_room_IR.ipynb
+++ b/discrete_systems/convolution_room_IR.ipynb
@@ -17,7 +17,7 @@
    "source": [
     "## Convolution of an Audio Signal with a Room Impulse Response\n",
     "\n",
-    "The propagation of sound in rooms is modeled by the linear [wave equation](https://en.wikipedia.org/wiki/Wave_equation), a second-order linear partial differential equation with constant coefficients. Consequently, the propagation path from a source (e.g. loudspeaker) at one position to a receiver (e.g. microphone) at another position can be interpreted as an LTI system. This system is characterized for instance by the impulse response between these two positions. This fact can be used for the synthesis of virtual acoustic environments. If a source signal (e.g. speech, instrument) without any room effect is convolved with the impulse response of a room (e.g. concert hall), the impression is created that the source playes in the room . This is also known as [convolution reverb](https://en.wikipedia.org/wiki/Convolution_reverb)."
+    "The propagation of sound in rooms is modeled by the linear [wave equation](https://en.wikipedia.org/wiki/Wave_equation), a second-order linear partial differential equation with constant coefficients. Consequently, the propagation path from a source (e.g. loudspeaker) at one position to a receiver (e.g. microphone) at another position can be interpreted as a linear time-invariant (LTI) system. This system is characterized for instance by the impulse response between these two positions. This fact can be used for the synthesis of virtual acoustic environments. If a source signal (e.g. speech, instrument) without any room effect is convolved with the impulse response of a room (e.g. concert hall), the impression is created that the source plays in the room. This is also known as [convolution reverb](https://en.wikipedia.org/wiki/Convolution_reverb)."
    ]
   },
   {
@@ -26,7 +26,7 @@
    "source": [
     "#### Read Speech Signal\n",
     "\n",
-    "First a source signal $x[k]$ is loaded into the vector `x` using the Python library [`PySoundFile`](http://pysoundfile.readthedocs.io/en/latest/)"
+    "First a source signal $x[k]$ is loaded into the vector `x` using the [`soundfile`](http://pysoundfile.readthedocs.io/en/latest/) module for Python"
    ]
   },
   {
@@ -58,10 +58,11 @@
    "outputs": [],
    "source": [
     "plt.figure(figsize=(8,4))\n",
-    "t = 1/fs*np.arange(len(x))\n",
+    "t = np.arange(len(x)) / fs\n",
     "plt.plot(t, x)\n",
     "plt.xlabel(r'$t$ in s')\n",
-    "plt.ylabel(r'$x[k]$');"
+    "plt.ylabel(r'$x[k]$')\n",
+    "plt.axis([0, t[-1], -1, 1]);"
    ]
   },
   {
@@ -155,10 +156,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "x = 0.9 * x / np.max(np.abs(x))\n",
     "sf.write('dry_source.wav', x, fs)\n",
     "\n",
-    "y = 0.9 * y / np.max(np.abs(y))\n",
+    "y = max(x) * y / np.max(np.abs(y))\n",
     "sf.write('wet_source.wav', y, fs)"
    ]
   },
