--- a/discrete_systems/linear_convolution.ipynb
+++ b/discrete_systems/linear_convolution.ipynb
@@ -75,7 +75,7 @@
     "\\end{equation}\n",
     "\n",
     "\n",
-    "can be decomposed into four steps:\n",
+    "can be decomposed into three steps:\n",
     "\n",
     "1. substitute $k$ by $\\kappa$ in both $x[k]$ and $h[k]$,\n",
     "\n",
@@ -114,7 +114,7 @@
     "    return np.where(k >= 0, 1.0, 0.0)\n",
     "\n",
     "def rect(k, N):\n",
-    "    return np.where((k>=0) & (k<N), 1.0, 0.0)\n",
+    "    return np.where((0 <= k) & (k < N), 1.0, 0.0)\n",
     "\n",
     "def plot_signals(k, x, h, xlabel, hlabel, klabel):\n",
     "    plt.figure(figsize=(8,4))\n",
@@ -244,7 +244,7 @@
     "s[k] * g[k] = \\sum_{\\kappa = 0}^{N-1} s[\\kappa] \\cdot g[k - \\kappa] = \\sum_{\\kappa = 0}^{M-1} s[k - \\kappa] \\cdot g[\\kappa]\n",
     "\\end{equation}\n",
     "\n",
-    "The computation of each output sample requires at least $N$ multiplications and $N-1$ additions. The numerically complexity of the convolution for the computation of $N$ output samples is therefore [in the order of](https://en.wikipedia.org/wiki/Big_O_notation) $\\mathcal{0} ( N^2 )$."
+    "for $0 \\leq k < N+M-1$. The computation of each output sample requires at least $N$ multiplications and $N-1$ additions. The numerically complexity of the convolution for the computation of $N$ output samples is therefore [in the order of](https://en.wikipedia.org/wiki/Big_O_notation) $\\mathcal{0} ( N^2 )$."
    ]
   },
   {
@@ -265,8 +265,7 @@
     "N = 7\n",
     "M = 15\n",
     "\n",
-    "k = np.arange(30)\n",
-    "x = np.convolve(rect(k, N), rect(k, M), mode='full')\n",
+    "x = np.convolve(np.ones(N), np.ones(M), mode='full')\n",
     "\n",
     "plt.stem(x)\n",
     "plt.xlabel('$k$')\n",
