Minor revision of text

--- a/discrete_systems/eigenfunctions.ipynb
+++ b/discrete_systems/eigenfunctions.ipynb
@@ -69,9 +69,9 @@
     "\n",
     "a = [1.0, -1.0, 1/2]\n",
     "b = [1.0]\n",
-    "z = np.exp(0.02 + 1j*.5)\n",
+    "z = np.exp(0.02 + .5j)\n",
     "\n",
-    "k = np.arange(0, 30)\n",
+    "k = np.arange(30)\n",
     "x = z**k\n",
     "y = signal.lfilter(b, a, x)"
    ]
@@ -129,7 +129,7 @@
    "source": [
     "## Transfer Function\n",
     "\n",
-    "The complex eigenvalue $\\lambda$ characterizes the properties of the transfer of a complex exponential signal $z^k$ with complex frequency $z$ through a discrete LTI system. It is commonly termed as [*transfer function*](https://en.wikipedia.org/wiki/Transfer_function) and denoted by $H(z)=\\lambda(z)$. Using this definition, the output signal $y[k]$ of an LTI system with complex exponential signal at the input reads\n",
+    "The complex eigenvalue $\\lambda$ characterizes the properties of the transfer of a complex exponential signal $z^k$ with [complex frequency $z$](../discrete_signals/standard_signals.ipynb#Complex-Exponential-Signal) through a discrete LTI system. It is commonly termed as [*transfer function*](https://en.wikipedia.org/wiki/Transfer_function) and denoted by $H(z)=\\lambda(z)$. Using this definition, the output signal $y[k]$ of an LTI system with complex exponential signal at the input reads\n",
     "\n",
     "\\begin{equation}\n",
     "y[k] = \\mathcal{H} \\{ z^k \\} = H(z) \\cdot z^k\n",
@@ -143,7 +143,7 @@
     "y[k] = | H(z) | \\cdot z^k = | H(z) | \\cdot e^{\\Sigma k + j \\Omega k + j \\varphi(z)}\n",
     "\\end{equation}\n",
     "\n",
-    "The magnitude $| H(z) |$ provides the frequency dependent attenuation of the eigenfunction $z^k$ by the system, while $\\varphi(z)$ provides the phase-shift introduced by the system."
+    "where $z = e^{\\Sigma + j \\Omega}$ has been substituted to derive the last equality. The magnitude $| H(z) |$ provides the frequency dependent attenuation of the eigenfunction $z^k$ by the system, while $\\varphi(z)$ provides the phase-shift introduced by the system."
    ]
   },
   {
@@ -158,7 +158,7 @@
     "y[k] = x[k] * h[k] = \\sum_{\\kappa = -\\infty}^{\\infty} x[k-\\kappa] \\cdot h[\\kappa]\n",
     "\\end{equation}\n",
     "\n",
-    "For a complex exponential signal as input $x[k] = z^k$ the output of athe LTI system is given as $y[k] = \\mathcal{H} \\{ z^k \\} = H(z) \\cdot z^k$. Introducing both signals into the left- and right-hand side of the convolution yields\n",
+    "For a complex exponential signal as input $x[k] = z^k$ the output of the LTI system is given as $y[k] = \\mathcal{H} \\{ z^k \\} = H(z) \\cdot z^k$. Introducing both signals into the left- and right-hand side of the convolution yields\n",
     "\n",
     "\\begin{equation}\n",
     "H(z) \\cdot z^k = \\sum_{\\kappa = -\\infty}^{\\infty} z^k \\, z^{- \\kappa} \\cdot h[\\kappa]\n",
