Added properties of the DFT, fixed typo in definition

--- a/discrete_fourier_transform/definition.ipynb
+++ b/discrete_fourier_transform/definition.ipynb
@@ -215,7 +215,10 @@
     "The DFT $X[\\mu] = \\text{DFT}_N \\{ e^{j \\Omega_0 k} \\}$ of the [harmonic exponential signal](../discrete_signals/standard_signals.ipynb#Complex-Exponential-Signal) with normalized frequency $\\Omega_0$ is derived by introducing it into the definition of the DFT. This results in\n",
     "\n",
     "\\begin{equation}\n",
-    "X[\\mu] = \\sum_{k=0}^{N-1} e^{j \\Omega_0 k} \\; e^{-j \\mu \\frac{2 \\pi}{N} k} = \\sum_{k=0}^{N-1} e^{j k (\\Omega_0 - \\mu \\frac{2 \\pi}{N})} = \\frac{1 - e^{j (\\Omega_0 - \\mu \\frac{2 \\pi}{N}) (N-1)}}{1 - e^{j (\\Omega_0 - \\mu \\frac{2 \\pi}{N})}} = e^{-j (\\Omega_0 - \\mu \\frac{2 \\pi}{N} ) \\frac{N-1}{2} } \\cdot \\frac{\\sin \\left( \\frac{N (\\Omega_0 - \\mu \\frac{2\\pi}{N})}{2} \\right)}{\\sin \\left( \\frac{ \\Omega_0 - \\mu \\frac{2\\pi}{N}}{2} \\right)}\n",
+    "X[\\mu] = \\sum_{k=0}^{N-1} e^{j \\Omega_0 k} \\; e^{-j \\mu \\frac{2 \\pi}{N} k} \n",
+    "= \\sum_{k=0}^{N-1} e^{j k (\\Omega_0 - \\mu \\frac{2 \\pi}{N})} \n",
+    "= \\frac{1 - e^{j (\\Omega_0 - \\mu \\frac{2 \\pi}{N}) N}}{1 - e^{j (\\Omega_0 - \\mu \\frac{2 \\pi}{N})}} \n",
+    "= e^{-j (\\Omega_0 - \\mu \\frac{2 \\pi}{N} ) \\frac{N-1}{2} } \\cdot \\frac{\\sin \\left( \\frac{N (\\Omega_0 - \\mu \\frac{2\\pi}{N})}{2} \\right)}{\\sin \\left( \\frac{ \\Omega_0 - \\mu \\frac{2\\pi}{N}}{2} \\right)}\n",
     "\\end{equation}\n",
     "\n",
     "The second last equality has been derived by noting that the sum constitutes a [finite geometrical series](https://en.wikipedia.org/wiki/Geometric_series) with the common ratio $e^{-j (\\Omega - \\mu \\frac{2 \\pi}{N})}$.\n",
