Added theorems of the z-transform

--- a/z_transform/definition.ipynb
+++ b/z_transform/definition.ipynb
@@ -94,10 +94,17 @@
     "The rectangular signal $x[k] = \\text{rect}_N[k]$ is a causal signal of finite duration. Using above result its $z$-transform can be derived straightforward as\n",
     "\n",
     "\\begin{equation}\n",
-    "\\mathcal{Z} \\{ \\text{rect}_N[k] \\} = 1 + z^{-1} + \\dots + z^{-N + 1}\n",
+    "\\mathcal{Z} \\{ \\text{rect}_N[k] \\} = \\sum_{k=0}^{N-1} z^{-k} = 1 + z^{-1} + \\dots + z^{-N + 1}\n",
     "\\end{equation}\n",
     "\n",
-    "for $z \\in \\mathbb{C} \\setminus \\{ 0 \\}$."
+    "for $z \\in \\mathbb{C} \\setminus \\{ 0 \\}$. Above sum can also be interpreted as [finite geometrical series](https://en.wikipedia.org/wiki/Geometric_series) with common ratio $\\frac{1}{z}$, resulting in an alternative form of the $z$-transform of the rectangular signal\n",
+    "\n",
+    "\\begin{equation}\n",
+    "\\mathcal{Z} \\{ \\text{rect}_N[k] \\} =  \\begin{cases}\n",
+    "\\frac{1 - z^{-N}}{1 - z^{-1}} & \\text{for } z \\neq 1 \\\\\n",
+    "N & \\text{for } z = 1\n",
+    "\\end{cases}\n",
+    "\\end{equation}"
    ]
   },
   {
