--- a/continuous_signals/standard_signals.ipynb
+++ b/continuous_signals/standard_signals.ipynb
@@ -8,7 +8,7 @@
    "source": [
     "# Continuous Signals\n",
     "\n",
-    "*This Jupyter notebook is part of a [collection of notebooks](../index.ipynb) in the bachelors module Signals and Systems, Comunications Engineering, Universität Rostock. Please direct questions and suggestions to [Sascha.Spors@uni-rostock.de](mailto:Sascha.Spors@uni-rostock.de).*"
+    "*This Jupyter notebook is part of a [collection of notebooks](../index.ipynb) in the bachelors module Signals and Systems, Communications Engineering, Universität Rostock. Please direct questions and suggestions to [Sascha.Spors@uni-rostock.de](mailto:Sascha.Spors@uni-rostock.de).*"
    ]
   },
   {
@@ -32,7 +32,7 @@
     "x(t) = e^{s t} \n",
     "\\end{equation}\n",
     "\n",
-    "where $s = \\sigma + j \\omega$ denotes the complex frequency with $\\sigma, \\omega \\in \\mathbb{R}$. It is used as a generalized representation of harmonic signals. Using [Euler's formula](https://en.wikipedia.org/wiki/Euler's_formula) the definition can be reformulated as\n",
+    "where $s = \\sigma + j \\omega$ denotes the complex frequency with $\\sigma, \\omega \\in \\mathbb{R}$. The signal is often used as a generalized representation of harmonic signals. Using [Euler's formula](https://en.wikipedia.org/wiki/Euler's_formula) above definition can be reformulated as\n",
     "\n",
     "\\begin{equation}\n",
     "x(t) = e^{(\\sigma + j \\omega) t} = e^{\\sigma t} \\cos(\\omega t) + j e^{\\sigma t} \\sin(\\omega t)\n",
@@ -40,11 +40,11 @@
     "\n",
     "The real/imaginary part of the exponential signal is given by a weighted cosine/sine with angular frequency $\\omega = 2 \\pi f$. For $t>0$, the time-dependent weight $e^{\\sigma t}$ is\n",
     "\n",
-    "* exponentially decaying over time for $\\sigma < 0$\n",
-    "* constantly one for $\\sigma = 0$\n",
-    "* exponentially growing over time for $\\sigma > 0$.\n",
+    "* exponentially decaying over time for $\\sigma < 0$,\n",
+    "* constantly one for $\\sigma = 0$,\n",
+    "* exponentially growing over time for $\\sigma > 0$,\n",
     "\n",
-    "and vice-versa for $t<0$. The complex exponential function is used to model harmonic signals with exponentially decreasing/increasing amplitude."
+    "and vice-versa for $t<0$. The complex exponential signal is used to model harmonic signals with exponentially decreasing or increasing amplitude."
    ]
   },
   {
@@ -53,7 +53,7 @@
    "source": [
     "**Example**\n",
     "\n",
-    "The following example illustrates the complex exponential signal and its parameters. The Python module [SymPy](http://docs.sympy.org/latest/index.html) is used for this purpose. It provides functionality for symbolic functions and mathematics. The required symbolic variables need to be defined explicitly before usage. In the example $t$, $\\omega$ and $\\sigma$ are defined as symbolic variables, followed by the definition of the exponential signal."
+    "The following example illustrates the complex exponential signal and its parameters. The Python module [SymPy](http://docs.sympy.org/latest/index.html) is used for this purpose. It provides functionality for symbolic functions and mathematics. The required symbolic variables need to be defined explicitly before usage. In the example $t$, $\\omega$ and $\\sigma$ are defined as symbolic variables, followed by the definition of the exponential signal itself."
    ]
   },
   {
@@ -76,7 +76,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now specific values for the complex frequency $s = \\sigma + j \\omega$ are considered for illustration. A new signal is defined by substituting both $\\sigma$ and $\\omega$ with specific values."
+    "Now specific values for the complex frequency $s = \\sigma + j \\omega$ are considered for illustration. A new signal is defined by substituting both $\\sigma$ and $\\omega$ with specific values. The real and imaginary part of the signal is plotted for illustration."
    ]
   },
   {
@@ -97,7 +97,7 @@
    "source": [
     "**Exercise**\n",
     "\n",
-    "* Try out other values for `omega` and `sigma` and create signals with increasing/constant/decreasing amplitude and different frequencies."
+    "* Try out other values for `omega` and `sigma` to create signals with increasing/constant/decreasing amplitude and different frequencies."
    ]
   },
   {
@@ -106,7 +106,7 @@
    "source": [
     "### Dirac Impulse\n",
     "\n",
-    "The Dirac impulse is one of the most important signals in the theory of signals and systems. It is used for the characterization of LTI systems and the modeling of impulse-like signals. The Dirac impulse is defined by way of the [Dirac delta function](https://en.wikipedia.org/wiki/Dirac_delta_function) which is not a function in the conventional sense but a generalized function or *distribution*. The Dirac impulse is denoted as $\\delta(t)$. The Dirac delta function can be defined as the limiting case of other functions or by its effect on other functions. Please refer to the literature for a detailed discussion of the mathematical foundations of the Dirac delta distribution. For its application in signal processing it is suitable to consider only certain properties. The most relevant properties of the Dirac impulse in the context of signals and systems are\n",
+    "The Dirac impulse is one of the most important signals in the theory of signals and systems. It is used for the characterization of LTI systems and the modeling of impulse-like signals. The Dirac impulse is defined by way of the [Dirac delta function](https://en.wikipedia.org/wiki/Dirac_delta_function) which is not a function in the conventional sense. It is a generalized function or *distribution*. The Dirac impulse is denoted as $\\delta(t)$. The Dirac delta function is defined by its effect on other functions. A rigorous treatment is beyond the scope of this course material. Please refer to the literature for a detailed discussion of the mathematical foundations of the Dirac delta distribution. Fortunately for its application in signal processing it is suitable to consider only certain properties. The most relevant ones are\n",
     "\n",
     "1. **Sifting property**\n",
     "    \\begin{equation}\n",
@@ -145,7 +145,7 @@
    "source": [
     "**Example**\n",
     "\n",
-    "This example illustrates some of the properties of the Delta impulse. Let's first define a Delta impulse by the Dirac delta function"
+    "This example illustrates some of the basic properties of the Dirac impulse. Let's first define a Dirac impulse by way of the Dirac delta function"
    ]
   },
   {
@@ -196,7 +196,7 @@
     "\\epsilon(t) = \\begin{cases} 0 & t<0 \\\\  1 & t \\geq 0 \\end{cases}\n",
     "\\end{equation}\n",
     "\n",
-    "Note that different definitions are used which differ with respect to the value of $\\epsilon(t)$ at $t=0$. The Heaviside signal is used to represent a signal that switches on at a specified time and stays switched on indefinitely. The Heaviside signal can be related to the Dirac impulse by\n",
+    "Note that different definitions exist that differ with respect to the value of $\\epsilon(t)$ at $t=0$. The Heaviside signal is used to represent a signal that switches on at a specified time and stays switched on indefinitely. The Heaviside signal can be related to the Dirac impulse by\n",
     "\n",
     "\\begin{equation}\n",
     "\\int_{-\\infty}^{t} \\delta(\\tau) \\; d\\tau = \\epsilon(t)\n",
@@ -264,7 +264,7 @@
     "\\text{rect}(t) = \\begin{cases} 1 & \\text{for } |t| < \\frac{1}{2} \\\\ 0 & \\text{otherwise}  \\end{cases}\n",
     "\\end{equation}\n",
     "\n",
-    "Note that different definitions are used which differ with respect to the value of $\\text{rect}(t)$ at $t \\pm \\frac{1}{2}$. The rectangular signal is used to represent a signal which is switched on for a limited period of time or has finite duration. The rectangular signal can be related to the Heaviside signal\n",
+    "Note that different definitions exist that differ with respect to the value of $\\text{rect}(t)$ at $t = \\pm \\frac{1}{2}$. The rectangular signal is used to represent a signal which is switched on for a limited period of time or has finite duration. The rectangular signal can be related to the Heaviside signal by\n",
     "\n",
     "\\begin{equation}\n",
     "\\text{rect}(t) = \\epsilon \\left(t + \\frac{1}{2} \\right) - \\epsilon \\left(t - \\frac{1}{2} \\right)\n",
@@ -329,7 +329,7 @@
     "|x(t)| = x(t) \\cdot \\text{sgn}(x(t))\n",
     "\\end{equation}\n",
     "\n",
-    "It is related to the Heaviside function as follows\n",
+    "It is related to the Heaviside function by\n",
     "\n",
     "\\begin{equation}\n",
     "\\text{sgn}(t) = 2 \\cdot \\epsilon(t) - 1\n",
@@ -366,6 +366,15 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Exercise**\n",
+    "\n",
+    "* Check the values of $\\text{sgn}(t)$ for $t \\to 0^-$, $t = 0$ and $t \\to 0^+$ as implemented in `SymPy`. Do they conform to above definition?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "nbsphinx": "hidden"
    },
@@ -392,7 +401,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.1"
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
